content/vault/v1.5.x/content/docs/commands/monitor.mdx
---
# Copyright (c) 2024 HashiCorp, Inc.
# Vault and the Vault logo are trademarks of HashiCorp.
#
# Documentation licensed under the Business Source License, Version 1.1.
# The original work was translated from English into Brazilian Portuguese.
# https://github.com/hashicorp/web-unified-docs/blob/-/LICENSE

layout: docs
page_title: monitor - Command
sidebar_title: <code>monitor</code>
description: |-
  The "monitor" command displays the server logs of a Vault server in real
  time.
---

# monitor

The `monitor` command shows a real time display of the server logs of a Vault
server. This command accepts a log level as an argument, which can be different
from the log level that the Vault server was started with.

The `monitor` command honors the `VAULT_ADDR` environment variable. The address
specified determines the target server that will be monitored.

Note that this command is designed to run indefinitely. It is similar to
`tail -f` in the Unix world. This command will not exit on its own unless
it encounters an unexpected error. As a user, you must terminate this
process yourself to shut it down.

## Examples

Monitor server logs at the `debug` log level:

```shell-session
$ vault monitor -log-level=debug
```

## Usage

The following flags are available in addition to the [standard set of
flags](/vault/docs/commands) included on all commands.

### Output Options

- `-log-level` `(string: "info")` - Monitor the Vault server at this log level.
  Valid log levels are (in order of detail) "trace", "debug", "info",
  "warn", "error". If this option is not specified, "info" is used.
